# my-first-rust-project

./: Cargo.toml  README.md  master.db
src/: main.rs  routes.rs
src/controllers/: auth.rs  mod.rs  user.rs
src/middleware/: auth.rs
src/models/: user.rs
