[package]
name = "my-first-rust-project"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.10"
jsonwebtoken = "9"
chrono = "0.4"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "0.12"